--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     background: #222;
     font-family: 'Open Sans', sans-serif;
     background-image: url('https://source.unsplash.com/random/1600×900/?landscape');
+    transition: background-image 1s ease-in-out;
     font-size: 120%;
 }
 
