--- a/style.css
+++ b/style.css
@@ -7,15 +7,19 @@ body {
     background: #222;
     font-family: 'Open Sans', sans-serif;
     background-image: url('https://source.unsplash.com/random/1600×900/?landscape');
+    background-repeat:no-repeat;
+    background-size: cover;
     transition: background-image 1s ease-in-out;
     font-size: 120%;
 }
 
 .card {
-    background: #000000d0;
-    color:white;
+    background: #d2c3c33e;
+    backdrop-filter: blur(5px);
+    color:rgb(255, 255, 255);
     padding: 2em;
     border-radius: 30px;
+    border:1.5px solid rgba(255, 255, 255 );
     width: 100%;
     max-width: 420px;
     margin: 1rem;
@@ -78,6 +82,8 @@ h1.temp {
 .weather.loading{
     visibility: hidden;
     max-height:20px;
+    
+    
 }
 .weather.loading::after{
     visibility: visible;
