--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ button {
     color: white;
     cursor: pointer;
     transition: 0.2s ease-in-out;
+    
 }
 
 input.search-bar {
@@ -61,8 +62,12 @@ input.search-bar {
     width: calc(100% - 100px);
 }
 
+
 button:hover {
-    background: #7c7c7c6b;
+    /* background: #7c7c7c6b; */
+    border: 3px solid #ff0000;
+    color: #ff0000;
+    background: #fff;
 }
 
 h1.temp {
